# ollama-red-agent

./: LICENSE  README.md  pyproject.toml  requirements.txt
config/prompts/: enum_prompt.txt  exploit_prompt.txt  postexploit_prompt.txt  recon_prompt.txt  report_prompt.txt
output/reports/: report_127.0.0.1.md
src/: __init__.py  config.py  main.py
src/agents/: base_agent.py
src/graph/: edges.py  nodes.py  orchestrator.py  state.py
src/tools/: nmap_tool.py
src/ui/: dashboard.py
